# enterprise-unified-platform

./: .env.example  .env.production  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BUSINESS_PLAN.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  MEGA_SYNC_GUIDE.md  Makefile  ORCHESTRATION.md  PERFORMANCE_IMPROVEMENTS.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  alembic.ini  app.py  cache_sync.py  coverage.xml  database_sync.py  deploy.sh  docker-compose.full.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  graphql_sync.py  mega_orchestrator.py  message_sync.py  ml_pipeline_sync.py  monitoring.py  pyproject.toml  requirements.txt  run_mega_sync.py  run_orchestration.py  search_sync.py  (+9 more)
.github/: copilot-instructions.md
.github/instructions/: frontend.instructions.md  python-backend.instructions.md  sync-systems.instructions.md
.github/workflows/: auto-complete-repair.yml  auto-deploy-all-systems.yml  auto-merge-on-green.yml  auto-revenue.yml  ci-cd.yml  continuous-healing.yml  deploy-revenue.yml  deploy-vercel-keyless.yml  deploy.yml  holographic-state-mesh.yml  keyless-oidc-deploy.yml  keyless-secret-rotation.yml  keyless-toolkit.yml  quantum-entropy-audit.yml  self-heal.yml  test.yml  velocity-benchmark.yml  vercel-deploy.yml
alembic/: env.py
api/: index.py
backend/: __init__.py  config.py  crud_helpers.py  crypto_engine.py  database.py  elasticsearch_service.py  email_service.py  genesis_onboarding.py  logging_config.py  main.py  middleware.py  models.py  money.py  monitoring.py  rbac.py  revenue_agent.py  schemas.py  security.py  speed_engine.py  velocity_api.py  websocket_manager.py
backend/alembic/: env.py
backend/alembic/versions/: f105cb510f6c_add_user_profile_table.py
backend/routers/: __init__.py  analytics.py  audit.py  auth.py  email_notifications.py  export.py  files.py  import_data.py  iterations.py  monitoring.py  notifications.py  organizations.py  payments.py  projects.py  revenue.py  search.py  tasks.py
backend/secret_managers/: gcp_secrets.py
backend/secrets/: __init__.py  aws_secrets.py
backend/secrets_manager/: __init__.py  azure_secrets.py
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_email_service.py  test_import.py  test_iterations.py  test_monitoring.py  test_openapi.py  test_payments.py  test_rbac.py  test_revenue.py  test_search.py  test_user_profile.py  test_websocket.py
frontend/: index.html  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/src/: App.css  App.tsx  index.css
frontend/src/__tests__/: placeholder.test.tsx
frontend/src/components/: DashboardCharts.css  DashboardCharts.tsx  Navbar.css  Navbar.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useAuth.ts  useNotifications.ts  useWebSocket.ts
frontend/src/pages/: AdminDashboard.css  AdminDashboard.tsx  Dashboard.css  Dashboard.tsx  Login.css  Login.tsx  ProjectDetail.tsx  Projects.tsx  Tasks.tsx
frontend/src/services/: api.ts  apiClient.ts
frontend/src/test/: DashboardCharts.test.tsx
k8s/: deployment.yaml
utils/: __init__.py  keyless_utils.py  keyless_utils_test.py
