[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-unified-platform"
version = "1.0.0"
description = "Enterprise Unified Platform"
requires-python = ">=3.10"

[project.scripts]
app = "app:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
