[project]
name = "enterprise-unified-platform"
version = "2.0.0"
description = "Enterprise Platform - AI-Powered Multi-System Integration"
requires-python = ">=3.11"
authors = [
    { name = "Garrett Carrol", email = "garrett@enterprise.dev" }
]
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "stripe>=7.0.0",
    "email-validator>=2.0.0"
]

[project.urls]
Repository = "https://github.com/Garrettc123/enterprise-unified-platform"
