[metadata]
name = enterprise-unified-platform
version = attr: app.__version__
description = Enterprise Unified Platform - Multi-System Integration Hub
long_description = file: README.md
long_description_content_type = text/markdown
author = Garrett Carrol
author_email = garrett@enterprise.dev
url = https://github.com/Garrettc123/enterprise-unified-platform
project_urls =
    Documentation = https://github.com/Garrettc123/enterprise-unified-platform/wiki
    Source = https://github.com/Garrettc123/enterprise-unified-platform
    Tracker = https://github.com/Garrettc123/enterprise-unified-platform/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Framework :: FastAPI
    Framework :: AsyncIO
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.11
packages = find:
install_requires =
    fastapi[all]>=0.109.0
    uvicorn[standard]>=0.27.0
    pydantic>=2.6.0
    sqlalchemy[asyncio]>=2.0.25

[options.packages.find]
where = .
include = app*, backend*, frontend*
exclude = tests*, docs*

[options.entry_points]
console_scripts =
    enterprise-cli = cli:main
    platform = main:cli

[options.extras_require]
dev =
    pytest>=8.0.0
    pytest-asyncio>=0.23.4
    pytest-cov>=4.1.0
    black>=24.1.1
    ruff>=0.2.1
    mypy>=1.8.0

[flake8]
max-line-length = 100
extend-ignore = E203, E266, E501, W503
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    migrations,
    node_modules
per-file-ignores =
    __init__.py:F401
max-complexity = 10

[bdist_wheel]
universal = 0